[workspace]
members = [
	"nullables/output_tracker",
	"nullables/fs",
	"nullables/tcp",
	"nullables/lmdb",
	"nullables/http_client",
	"nullables/clock",
	"nullables/random",
	"nullables/console", 
	"nullables/tracing_subscriber",
	"nullables/env", 
	"types",
	"utils",
	"work",
	"messages",
	"network",
	"rpc/messages",
	"rpc/client",
	"rpc/server",
	"websocket/messages", 
	"websocket/client", 
	"websocket/server",
	"store_lmdb",
	"ledger",
	"wallet", 
	"node",
	"main",
	"daemon", 
	"network_protocol", 
	"tools/record-rep-weights", 
	"tools/nanospam", 
	"tools/test_helpers", 
	"tools/signature-checker", 
	"tools/insight", 
	]

resolver = "2"
