[package]
name = "burst_daemon"
version = "0.1.0"
edition = "2024"

[features]
ledger_snapshots = [
	"burst_utils/ledger_snapshots",
	"burst_ledger/ledger_snapshots",
	"burst_rpc_server/ledger_snapshots",
]

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_derive = "1"
burst_nullable_http_client = { path = "../nullables/http_client" }
burst_types = { path = "../types" }
burst_utils = { path = "../utils" }
burst_ledger = { path = "../ledger" }
burst_node = { path = "../node" }
burst_rpc_server = { path = "../rpc/server" }
burst_websocket_server = { path = "../websocket/server" }
anyhow = "1"
tokio = { version = "1", features = ["signal"] }
tracing = "0"
