[package]
name = "rsnano_ledger"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
ledger_snapshots = ["rsnano_store_lmdb/ledger_snapshots"]

[dev-dependencies]
rsnano_store_lmdb = { path = "../store_lmdb", features=["output_tracking"]}

[dependencies]
rsnano_types = { path = "../types" }
rsnano_work = { path = "../work" }
rsnano_utils = { path = "../utils" }
rsnano_store_lmdb = { path = "../store_lmdb" }
rsnano_nullable_lmdb = { path = "../nullables/lmdb" }
rsnano_nullable_env = { path = "../nullables/env" }
rsnano_output_tracker = { path = "../nullables/output_tracker" }
anyhow = "1"
once_cell = "1"
num-traits = "0"
num-derive = "0"
rand = {version="0" }
serde_json = "1"
tracing = "0"
strum = "0.27.2"
strum_macros = "0.27.2"
