[package]
name = "burst_ledger"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
ledger_snapshots = ["burst_store_lmdb/ledger_snapshots"]

[dev-dependencies]
burst_store_lmdb = { path = "../store_lmdb", features=["output_tracking"]}

[dependencies]
burst_types = { path = "../types" }
burst_work = { path = "../work" }
burst_utils = { path = "../utils" }
burst_store_lmdb = { path = "../store_lmdb" }
burst_nullable_lmdb = { path = "../nullables/lmdb" }
burst_nullable_env = { path = "../nullables/env" }
burst_output_tracker = { path = "../nullables/output_tracker" }
anyhow = "1"
once_cell = "1"
num-traits = "0"
num-derive = "0"
rand = {version="0" }
serde_json = "1"
tracing = "0"
strum = "0.27.2"
strum_macros = "0.27.2"
