[package]
name = "rsnano_node_main"
version = "0.1.0"
authors = ["Gustav Schauwecker <service@simpago.com>"]
edition = "2024"

[features]
ledger_snapshots = ["rsnano_node/ledger_snapshots", "rsnano_rpc_server/ledger_snapshots"]

[[bin]]
name = "rsnano_node"
path = "src/bin.rs"

[dependencies]
rsnano_types = { path = "../types" }
rsnano_utils = { path = "../utils" }
rsnano_messages = { path = "../messages" }
rsnano_store_lmdb = { path = "../store_lmdb" }
rsnano_node = { path = "../node" }
rsnano_ledger = { path = "../ledger" }
rsnano_rpc_server = { path = "../rpc/server" }
rsnano_daemon = { path = "../daemon" }
rsnano_nullable_console = { path = "../nullables/console" }
rsnano_nullable_tracing_subscriber = { path = "../nullables/tracing_subscriber" }
rsnano_nullable_lmdb = { path = "../nullables/lmdb" }
rsnano_nullable_fs = { path = "../nullables/fs" }
tracing = "0.1"
clap = { version = "4", features = ["derive"] }
anyhow = "1.0.100"
rand = { version = "0.9" }
tokio = { version = "1", features = ["signal"] }
toml = "0.9.8"
serde_json = "1.0.145"
serde = "1.0.228"
serde_derive = "1.0.228"

[dev-dependencies]
assert_cmd = "2.1.1"
