[package]
name = "burst_node_main"
version = "0.1.0"
authors = ["Gustav Schauwecker <service@simpago.com>"]
edition = "2024"

[features]
ledger_snapshots = ["burst_node/ledger_snapshots", "burst_rpc_server/ledger_snapshots"]

[[bin]]
name = "burst_node"
path = "src/bin.rs"

[dependencies]
burst_types = { path = "../types" }
burst_utils = { path = "../utils" }
burst_messages = { path = "../messages" }
burst_store_lmdb = { path = "../store_lmdb" }
burst_node = { path = "../node" }
burst_ledger = { path = "../ledger" }
burst_rpc_server = { path = "../rpc/server" }
burst_daemon = { path = "../daemon" }
burst_nullable_console = { path = "../nullables/console" }
burst_nullable_tracing_subscriber = { path = "../nullables/tracing_subscriber" }
burst_nullable_lmdb = { path = "../nullables/lmdb" }
burst_nullable_fs = { path = "../nullables/fs" }
tracing = "0.1"
clap = { version = "4", features = ["derive"] }
anyhow = "1.0.100"
rand = { version = "0.9" }
tokio = { version = "1", features = ["signal"] }
toml = "0.9.8"
serde_json = "1.0.145"
serde = "1.0.228"
serde_derive = "1.0.228"

[dev-dependencies]
assert_cmd = "2.1.1"
