[package]
name = "rsnano_messages"
version = "0.1.0"
authors = ["Gustav Schauwecker <service@simpago.com>"]
edition = "2024"

[features]
ledger_snapshots = ["rsnano_utils/ledger_snapshots"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rsnano_types = { path = "../types" }
rsnano_work = { path = "../work" }
rsnano_utils = { path = "../utils" }
anyhow = "1"
bitvec = "1"
num = "0"
num-derive = "0"
num-traits = "0"
rand = { version = "0" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_derive = "1"
static_assertions = "1"
siphasher = "1"
strum = "0"
strum_macros = "0"
