[package]
name = "burst_messages"
version = "0.1.0"
authors = ["Gustav Schauwecker <service@simpago.com>"]
edition = "2024"

[features]
ledger_snapshots = ["burst_utils/ledger_snapshots"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
burst_types = { path = "../types" }
burst_work = { path = "../work" }
burst_utils = { path = "../utils" }
burst_nullable_random = { path = "../nullables/random" }
anyhow = "1"
bitvec = "1"
num = "0"
num-derive = "0"
num-traits = "0"
rand = { version = "0.9.2" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_derive = "1"
static_assertions = "1"
siphasher = "1"
strum = "0"
strum_macros = "0"
