[package]
name = "burst_network_protocol"
version = "0.1.0"
edition = "2024"

[features]
ledger_snapshots = ["burst_messages/ledger_snapshots"]

[dependencies]
burst_types = { path = "../types" }
burst_utils = { path = "../utils" }
burst_messages = { path = "../messages" }
burst_network = { path = "../network" }
burst_nullable_random = { path = "../nullables/random" }
anyhow = "1"
rand = { version = "0.9.2" }
tracing = "0"
strum = "0"
strum_macros = "0"
