[package]
name = "burst_node"
version = "2.0.0-dev"
authors = ["Gustav Schauwecker <service@simpago.com>"]
edition = "2024"

[features]
output_tracking = []
ledger_snapshots = [
	"burst_messages/ledger_snapshots", 
	"burst_network/ledger_snapshots", 
	"burst_network_protocol/ledger_snapshots",
	"burst_utils/ledger_snapshots",
	"burst_store_lmdb/ledger_snapshots",
	"burst_ledger/ledger_snapshots",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
burst_types = { path = "../types" }
burst_work = { path = "../work" }
burst_utils = { path = "../utils" }
burst_messages = { path = "../messages" }
burst_network = { path = "../network" }
burst_network_protocol = { path = "../network_protocol" }
burst_store_lmdb = { path = "../store_lmdb" }
burst_output_tracker = { path = "../nullables/output_tracker" }
burst_wallet = { path = "../wallet" }
burst_nullable_fs = { path = "../nullables/fs" }
burst_nullable_tcp = { path = "../nullables/tcp" }
burst_nullable_lmdb = { path = "../nullables/lmdb" }
burst_nullable_clock = { path = "../nullables/clock" }
burst_nullable_random = { path = "../nullables/random" }
burst_nullable_http_client = { path = "../nullables/http_client" }
burst_nullable_env = { path = "../nullables/env" }
burst_ledger = { path = "../ledger" }
burst_websocket_messages = { path = "../websocket/messages" }
anyhow = "1"
bitvec = "1"
blake2 = "0.10.6"
bounded-vec-deque = "0"
chrono = "0"
dirs = "6"
num = "0"
num-derive = "0"
num-traits = "0.2.19"
once_cell = "1"
rand = { version = "0.9.2" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_derive = "1"
static_assertions = "1"
toml_edit = "0"
uuid = { version = "1", features = ["v4"] }
serde_variant = "0"
primitive-types = "0"
tokio = { version = "1", features = [
    "rt",
    "rt-multi-thread",
    "net",
    "time",
    "macros",
    "sync",
] }
async-trait = "0"
tracing = "0"
ordered-float = "5"
tokio-tungstenite = "0"
futures-util = { version = "0", features = ["sink"] }
tokio-util = "0"
toml = "0"
strum = "0.27.2"
strum_macros = "0"
build-info = "0.0.42"
num-format = "0.4.4"
rustc-hash = "2.1.1"
const_format = "0.2.35"

[dev-dependencies]
mock_instant = "0"
tracing-test = "0"
test_helpers = { path = "../tools/test_helpers" }
ntest = "0.9.3"
burst_types = { path = "../types" }
burst_utils = { path = "../utils" }
burst_messages = { path = "../messages" }
burst_network = { path = "../network" }
burst_store_lmdb = { path = "../store_lmdb" }
burst_ledger = { path = "../ledger" }
burst_node = { path = "." }
burst_nullable_clock = { path = "../nullables/clock" }
burst_nullable_tcp = { path = "../nullables/tcp" }
burst_nullable_lmdb = { path = "../nullables/lmdb" }
burst_nullable_random = { path = "../nullables/random" }
burst_nullable_env = { path = "../nullables/env" }
burst_output_tracker = { path = "../nullables/output_tracker" }
burst_work = { path = "../work" }
burst_wallet = { path = "../wallet" }
burst_websocket_messages = { path = "../websocket/messages" }
burst_network_protocol = { path = "../network_protocol" }

[build-dependencies]
build-info-build = "0.0.42"
