[package]
name = "rsnano_store_lmdb"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
output_tracking = []
ledger_snapshots = []

[dev-dependencies]
rsnano_store_lmdb = { path = ".", features = ["output_tracking"] }

[dependencies]
rsnano_types = { path = "../types" }
rsnano_output_tracker = { path = "../nullables/output_tracker" }
rsnano_nullable_lmdb = { path = "../nullables/lmdb" }
primitive-types = "0"
anyhow = "1"
uuid = { version = "1", features = ["v4"] }
num-traits = "0"
rand = { version = "0" }
num-derive = "0"
serde_json = "1"
tracing = "0.1"
serde = { version = "1", features = ["derive"] }
