[package]
name = "burst_types"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
burst_nullable_random = { path = "../nullables/random" }
rand = { version = "0.9.2" }
aes = "0"
blake2 = "0.10.6"
ctr = "0"
ed25519-dalek = { git = "https://github.com/rsnano-node/ed25519-dalek.git", rev = "1f9d706d7033d34bdc1ed7c1789498c82ec0df10", features = ["legacy_compatibility", "rand_core"] }
hex = "0"
num = "0"
num-traits = "0"
num-format = "0"
num-derive = "0"
primitive-types = "0"
rust-argon2 = "3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
static_assertions = "1"
chrono = "0"
strum = "0"
strum_macros = "0"
thiserror = "2.0.17"
const_format = "0.2.35"
