[package]
name = "burst_utils"
version = "0.1.0"
edition = "2024"

[features]
ledger_snapshots = []

[dependencies]
burst_output_tracker = { path = "../nullables/output_tracker" }
burst_nullable_clock = { path = "../nullables/clock" }
serde = { version = "1", features = ["derive"] }
serde_variant = "0"
serde_json = "1"
num = "0"
num-traits = "0"
num-derive = "0"
anyhow = "1"
bounded-vec-deque = "0"
chrono = "0"
tracing = "0"
threadpool = "1.8.1"

[dev-dependencies]
ntest = "0.9.3"
