[package]
name = "rsnano_wallet"
version = "0.1.0"
edition = "2024"

[dependencies]
rsnano_types = { path = "../types" }
rsnano_utils = { path = "../utils" }
rsnano_work = { path = "../work" }
rsnano_store_lmdb = { path = "../store_lmdb" }
rsnano_ledger = { path = "../ledger" }
rsnano_nullable_clock = { path = "../nullables/clock" }
rsnano_nullable_lmdb = { path = "../nullables/lmdb" }
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_derive = "1"
rand = { version = "0.9.2" }
tracing = "0"
