[package]
name = "burst_wallet"
version = "0.1.0"
edition = "2024"

[dependencies]
burst_types = { path = "../types" }
burst_utils = { path = "../utils" }
burst_work = { path = "../work" }
burst_store_lmdb = { path = "../store_lmdb" }
burst_ledger = { path = "../ledger" }
burst_nullable_clock = { path = "../nullables/clock" }
burst_nullable_random = { path = "../nullables/random" }
burst_nullable_lmdb = { path = "../nullables/lmdb" }
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_derive = "1"
rand = { version = "0.9.2" }
tracing = "0"
