[package]
name = "burst_work"
version = "0.1.0"
edition = "2024"

[features]
opencl = ["dep:ocl"]

[dependencies]
burst_types = { path = "../types" }
burst_utils = { path = "../utils" }
burst_nullable_random = { path = "../nullables/random" }
tracing = "0"
ocl = { version = "0.19", optional = true }
rand = { version = "0.9" }
serde_json = "1"
