[package]
name = "rsnano_rpc_server"
version = "0.1.0"
edition = "2024"

[features]
ledger_snapshots = ["rsnano_rpc_messages/ledger_snapshots"]

[dependencies]
rsnano_types = { path = "../../types" }
rsnano_utils = { path = "../../utils" }
rsnano_messages = { path = "../../messages" }
rsnano_network = { path = "../../network" }
rsnano_node = { path = "../../node" }
rsnano_ledger = { path = "../../ledger" }
rsnano_wallet = { path = "../../wallet" }
rsnano_rpc_client = { path = "../client" }
rsnano_nullable_clock = { path = "../../nullables/clock" }
rsnano_rpc_messages = { path = "../messages" }
rsnano_store_lmdb = { path = "../../store_lmdb" }
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["preserve_order"] }
tokio = { version = "1", features = ["net"] }
anyhow = "1"
axum = "0.8"
toml = "0.9"
tracing = "0.1"
itertools = "0.14"
indexmap = "2"

[dev-dependencies]
test_helpers = { path = "../../tools/test_helpers" }
rsnano_utils = { path = "../../utils" }
