[package]
name = "burst_rpc_server"
version = "0.1.0"
edition = "2024"

[features]
ledger_snapshots = ["burst_rpc_messages/ledger_snapshots"]

[dependencies]
burst_types = { path = "../../types" }
burst_utils = { path = "../../utils" }
burst_messages = { path = "../../messages" }
burst_network = { path = "../../network" }
burst_node = { path = "../../node" }
burst_ledger = { path = "../../ledger" }
burst_wallet = { path = "../../wallet" }
burst_rpc_client = { path = "../client" }
burst_nullable_clock = { path = "../../nullables/clock" }
burst_rpc_messages = { path = "../messages" }
burst_store_lmdb = { path = "../../store_lmdb" }
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["preserve_order"] }
tokio = { version = "1", features = ["net"] }
anyhow = "1"
axum = "0.8"
toml = "0.9"
tracing = "0.1"
itertools = "0.14"
indexmap = "2"

[dev-dependencies]
test_helpers = { path = "../../tools/test_helpers" }
burst_utils = { path = "../../utils" }
burst_types = { path = "../../types" }
burst_messages = { path = "../../messages" }
burst_network = { path = "../../network" }
burst_node = { path = "../../node" }
burst_ledger = { path = "../../ledger" }
burst_wallet = { path = "../../wallet" }
burst_rpc_client = { path = "../client" }
burst_rpc_messages = { path = "../messages" }
burst_store_lmdb = { path = "../../store_lmdb" }
burst_nullable_clock = { path = "../../nullables/clock" }
burst_websocket_server = { path = "../../websocket/server" }
