[package]
name = "burst-insight"
version = "0.1.0"
edition = "2024"

[features]
ledger_snapshots = [
	"burst_node/ledger_snapshots",
	"burst_daemon/ledger_snapshots",
]

[dependencies]
eframe = "0.33.2"
egui_extras = "0.33.2"
burst_nullable_clock = { path = "../../nullables/clock" }
burst_nullable_tracing_subscriber = { path = "../../nullables/tracing_subscriber" }
burst_types = { path = "../../types" }
burst_utils = { path = "../../utils" }
burst_messages = { path = "../../messages" }
burst_network = { path = "../../network" }
burst_store_lmdb = { path = "../../store_lmdb" }
burst_node = { path = "../../node" }
burst_daemon = { path = "../../daemon" }
burst_ledger = { path = "../../ledger" }
tokio = { version = "1", features = ["rt-multi-thread"] }
num-format = "0.4.4"
num = "0"
num-traits = "0"
num-derive = "0"
chrono = "0.4.42"
strum = "0"
tracing = "0"
serde_json = "1"
