[package]
name = "burstspam"
version = "0.1.0"
edition = "2024"

[dependencies]
burst_nullable_clock = { path = "../../nullables/clock" }
burst_nullable_tcp = { path = "../../nullables/tcp" }
burst_nullable_tracing_subscriber = { path = "../../nullables/tracing_subscriber" }
burst_nullable_env = { path = "../../nullables/env" }
burst_types = { path = "../../types" }
burst_utils = { path = "../../utils" }
burst_messages = { path = "../../messages" }
burst_network = { path = "../../network" }
burst_network_protocol = { path = "../../network_protocol" }
burst_websocket_messages = { path = "../../websocket/messages" }
burst_websocket_client = { path = "../../websocket/client" }
burst_rpc_client = { path = "../../rpc/client" }
burst_rpc_messages = { path = "../../rpc/messages" }
anyhow = "1.0.100"
tokio = { version = "1.48.0", features = ["macros", "rt", "rt-multi-thread", "net", "io-util"] }
tokio-scoped = "0.2.0"
tracing = "0.1.41"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rand = "0.9.2"
tokio-util = "0.7.17"
dirs = "6.0.0"
clap = { version = "4.5.53", features = ["derive"] }
rustc-hash = "2.1.1"
num-format = "0.4.4"

[dev-dependencies]
ntest = "0.9.3"
