[package]
name = "record-rep-weights"
version = "0.1.0"
edition = "2024"

[dependencies]
burst_types = { path = "../../types" }
burst_rpc_messages = { path = "../../rpc/messages" }
burst_rpc_client = { path = "../../rpc/client" }
anyhow = "1"
tokio = { version = "1", features = [
    "rt",
    "macros",
] }
clap = { version = "4.5.53", features = ["derive"] }
