[package]
name = "test_helpers"
version = "0.1.0"
edition = "2024"

[dependencies]
burst_nullable_tcp = { path = "../../nullables/tcp" }
burst_nullable_tracing_subscriber = { path = "../../nullables/tracing_subscriber" }
burst_types = { path = "../../types" }
burst_work = { path = "../../work" }
burst_ledger = { path = "../../ledger" }
burst_store_lmdb = { path = "../../store_lmdb" }
burst_network = { path = "../../network" }
burst_node = { path = "../../node", features = ["output_tracking"] }
burst_rpc_client = { path = "../../rpc/client" }
burst_rpc_server = { path = "../../rpc/server" }
burst_websocket_server = { path = "../../websocket/server" }
mock_instant = "0"
axum = "0"
tracing-test = "0"
tokio = { version = "1" }
anyhow = "1"
