[package]
name = "burst_websocket_client"
version = "0.1.0"
edition = "2024"

[dependencies]
burst_types = { path = "../../types" }
burst_websocket_messages = { path = "../messages" }
tokio-tungstenite = "0"
tokio = { version = "1", features = [
    "net",
] }
futures-util = { version = "0", features = ["sink"] }
serde = "1"
serde_json = "1"
strum = "0"
strum_macros = "0"
thiserror = "2.0.17"
