[package]
name = "burst_websocket_messages"
version = "0.1.0"
edition = "2024"

[dependencies]
burst_types = { path = "../../types" }
burst_work = { path = "../../work" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
num-derive = "0"
num-traits = "0"
strum = "0"
strum_macros = "0"
