[package]
name = "burst_websocket_server"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1"
futures-util = { version = "0", features = ["sink"] }
num-derive = "0"
num-traits = "0"
burst_types = { path = "../../types" }
burst_messages = { path = "../../messages" }
burst_ledger = { path = "../../ledger" }
burst_wallet = { path = "../../wallet" }
burst_node = { path = "../../node" }
burst_websocket_messages = { path = "../messages" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = [
    "rt",
    "rt-multi-thread",
    "net",
    "time",
    "macros",
    "sync",
] }
tokio-tungstenite = "0"
tracing = "0"

[dev-dependencies]
test_helpers = { path = "../../tools/test_helpers" }
burst_nullable_tcp = { path = "../../nullables/tcp" }
burst_websocket_client = { path = "../client" }
